--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-02-01  JJ Allaire  <jj@rstudio.org>
+
+        * R/Attributes.R: Embedded R code chunks in sourceCpp can
+        now be disabled
+
 2014-01-31  Dirk Eddelbuettel  <edd@debian.org>
 
 	* vignettes/Rcpp-FAQ.Rnw: Render code with background boxen
