--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* tests/doRUnit.R: Simplified following pattern in RProtoBuf
 
+	* vignettes/Rcpp-unitTests.Rnw: Remove a now superfluous global var
+
 2014-02-01  JJ Allaire  <jj@rstudio.org>
 
         * R/Attributes.R: Embedded R code chunks in sourceCpp can
