--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -98,17 +98,17 @@
 
 @Manual{CRAN:RProtoBuf,
   title =	 {RProtoBuf: R Interface to the Protocol Buffers API},
-  author =	 {Romain Fran\c{c}ois and Dirk Eddelbuettel},
-  year =	 2013,
-  note =	 {R package version 0.3.2},
+  author =	 {Romain Fran\c{c}ois and Dirk Eddelbuettel and Murray Stokely and Jeroen Ooms},
+  year =	 2014,
+  note =	 {R package version 0.4.0},
   url =		 CRAN # "package=RProtoBuf"
 }
 
 @Manual{CRAN:RQuantLib,
   title =	 {RQuantLib: {R} interface to the {QuantLib} library},
   author =	 {Dirk Eddelbuettel and Khanh Nguyen},
-  year =	 2013,
-  note =	 {R package version 0.3.10},
+  year =	 2014,
+  note =	 {R package version 0.3.11},
   url =		 CRAN # "package=RQuantLib"
 }
 
@@ -152,7 +152,7 @@
   crossref =     {CRAN:Rcpp},
   author = 	 {Dirk Eddelbuettel and Romain Fran\c{c}ois},
   title = 	 {Exposing {C++} functions and classes with {Rcpp} modules},
-  year = 	 2013,
+  year = 	 2014,
   note = 	 {Vignette included in R package Rcpp},
   url =		 CRAN # "package=Rcpp"
 }
@@ -161,7 +161,7 @@
   crossref =     {CRAN:Rcpp},
   author = 	 {Dirk Eddelbuettel and Romain Fran\c{c}ois},
   title = 	 {{Rcpp} syntactic sugar},
-  year = 	 2013,
+  year = 	 2014,
   note = 	 {Vignette included in R package Rcpp},
   url =		 CRAN # "package=Rcpp"
 }
@@ -171,16 +171,16 @@
                   templated linear algebra library},
   author =	 {Romain Fran\c{c}ois and Dirk Eddelbuettel and
                   Douglas Bates},
-  year =	 2013,
-  note =	 {R package version 0.3.930.1},
+  year =	 2014,
+  note =	 {R package version 0.4.000.2},
   url =		 CRAN # "package=RcppArmadillo"
 }
 
 @Manual{CRAN:RcppClassic,
   title =	 {RcppClassic: Deprecated 'classic' Rcpp API},
   author =	 {Dirk Eddelbuettel and Romain Fran\c{c}ois},
-  year =	 2012,
-  note =	 {R package version 0.9.3},
+  year =	 2014,
+  note =	 {R package version 0.9.5},
   url =		 CRAN # "package=RcppClassic"
 }
 
@@ -196,8 +196,8 @@
   title =	 {RcppEigen: Rcpp integration for the Eigen templated linear 
 		  algebra library}, 
   author =	 {Douglas Bates and Romain Fran\c{c}ois and Dirk Eddelbuettel},
-  year =	 2013,
-  note =	 {{R} package version 0.3.2.0.1},
+  year =	 2014,
+  note =	 {{R} package version 0.3.2.0.2},
   url =		 CRAN # "package=RcppEigen"
 }
 
@@ -268,8 +268,8 @@
 @Manual{CRAN:Matrix,
   title =	 {\pkg{Matrix}: Sparse and Dense Matrix Classes and Methods},
   author =	 {Douglas Bates and Martin Maechler},
-  year =	 2013,
-  note =	 {R package version 1.1-1.1},
+  year =	 2014,
+  note =	 {R package version 1.1-2},
   url =		 CRAN # "package=Matrix"
 }
 
@@ -286,8 +286,8 @@
 @Manual{CRAN:roxygen2,
   title =	 {roxygen2: In-source documentation for R},
   author =	 {Hadley Wickham and Peter Danenberg and Manuel Eugster},
-  year =	 2011,
-  note =	 {R package version 3.0.0},
+  year =	 2014,
+  note =	 {R package version 3.1.0},
   url =		 CRAN # "package=roxygen2"
 }
 
@@ -466,7 +466,7 @@
   author =	 RCoreTeam,
   organization = RFoundation,
   address =	 {Vienna, Austria},
-  year =	 2012,
+  year =	 2013,
   title =	 "R Installation and Administration",
   note =	 {{ISBN} 3-900051-09-7},
   url =		 manuals # "R-admin.html"
@@ -478,7 +478,7 @@
   address =	 {Vienna, Austria},
   year =	 2012,
   title =	 "Writing R extensions",
-  note =	 {{ISBN} 3-900051-11-9},
+  annote =	 {{ISBN} 3-900051-11-9},
   url =		 manuals # "R-exts.html"
 }
 
@@ -486,9 +486,9 @@
   author =	 RCoreTeam,
   organization = RFoundation,
   address =	 {Vienna, Austria},
-  year =	 2012,
+  year =	 2013,
   title =	 "R internals",
-  note =	 {{ISBN} 3-900051-14-3},
+  annote =	 {{ISBN} 3-900051-14-3},
   url =		 manuals # "R-ints.html"
 }
 
@@ -506,9 +506,9 @@
   author =	 RCoreTeam,
   organization = RFoundation,
   address =	 {Vienna, Austria},
-  year =	 2012,
+  year =	 2013,
   title =	 "R language",
-  note =	 {{ISBN} 3-900051-13-5},
+  annote =	 {{ISBN} 3-900051-13-5},
   url =		 manuals # "R-lang.html"
 }
 
@@ -592,12 +592,14 @@
 }
 
 @InProceedings{Maurer+Wong:2008:AttributesInC++,
-  author    = {Jens Maurer and Michael Wong},
-  title     = {Towards support for attributes in {C++} (Revision 6)},
-  booktitle = {JTC1/SC22/WG21 - The C++ Standards Committee},
-  year      = {2008},
-  url       = {http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2008/n2761.pdf}, 
-  note      = {{N2761=08-0271}}  
+  author =       {Jens Maurer and Michael Wong},
+  title =        {Towards support for attributes in {C++} (Revision
+                  6)},
+  booktitle =    {JTC1/SC22/WG21 - The C++ Standards Committee},
+  year =         {2008},
+  url =
+                  {http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2008/n2761.pdf},
+  note =         {{N2761=08-0271}}
 }
 
 @InProceedings{Urbanek:2003:Rserve,
@@ -634,9 +636,9 @@
 }
 
 @misc{KDE-TechBase:2012,
-  author = {KDE-TechBase},
-  title = {Binary Compatibility Issues With {C++}},
-  howpublished = "\url{http://techbase.kde.org/Policies/Binary_Compatibility_Issues_With_C++}",
-  year = {2012}, 
-  note = "[Online; accessed 24-November-2012]"
+  author =       {KDE-TechBase},
+  title =        {Binary Compatibility Issues With {C++}},
+  url  =         "http://techbase.kde.org/Policies/Binary_Compatibility_Issues_With_C++",
+  year =         2012,
+  note =         "[Online; accessed 24-November-2012]"
 }
