also update Rcpp entry

--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -133,9 +133,9 @@
 
 @Manual{CRAN:Rcpp,
   title =	 {{Rcpp}: Seamless {R} and {C++} Integration},
-  author =	 {Dirk Eddelbuettel and Romain Fran\c{c}ois},
-  year =	 2013,
-  note =	 {R package version 0.10.6},
+  author =	 {Dirk Eddelbuettel and Romain Fran\c{c}ois}
+  year =	 2014,
+  note =	 {R package version 0.11.0},
   url =		 CRAN # "package=Rcpp"
 }
 
