add JJ, John, Doug and Kevin to author in .bib
that was overdue -- sorry

--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -133,7 +133,9 @@
 
 @Manual{CRAN:Rcpp,
   title =	 {{Rcpp}: Seamless {R} and {C++} Integration},
-  author =	 {Dirk Eddelbuettel and Romain Fran\c{c}ois}
+  author =	 {Dirk Eddelbuettel and Romain Fran\c{c}ois and JJ
+                  Allaire and John Chambers and Douglas Bates and
+                  Kevin Ushey},
   year =	 2014,
   note =	 {R package version 0.11.0},
   url =		 CRAN # "package=Rcpp"
