--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-02-03  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp/vector/Vector.h: Enable conversion from
+	Rcpp vectors to RObject
+
 2014-02-02  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.11.0
