--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-07  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp/Reference.h: Add default ctor
+
 2014-02-03  Kevin Ushey  <kevinushey@gmail.com>
 
 	* inst/include/Rcpp/vector/Vector.h: Enable conversion from
