--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-17  Romain Francois <romain@r-enthusiasts.com>
+
+        * inst/include/Rcpp/traits/un_pointer.h: fix bug in un_pointer for object<T>
+
 2014-02-16  JJ Allaire <jj@rstudio.org>
 
         * src/attributes.cpp Replace (incorrect) call to 
