--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-23  Kevin Ushey <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/DataFrame.h: better nrows behavior
+
 2014-02-17  Romain Francois <romain@r-enthusiasts.com>
 
         * inst/include/Rcpp/traits/un_pointer.h: fix bug in un_pointer for object<T>
