--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-03-03  Kevin Ushey <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/proxy/SlotProxy.h: Add missing const_SlotProxy ctor
+        definition
+
 2014-02-24  Kevin Ushey  <kevinushey@gmail.com>
 
         * R/Rcpp.package.skeleton.R: make sure we add loadModule
