--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-03-08  Kevin Ushey <kevinushey@gmail.com>
+
+    * inst/include/Rcpp/proxy/proxy.h: Make sure proxys know about the
+    const char* wrap shortcut
+
 2014-03-08  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/Rcpp/proxy/Binding.h: Remove spurious ';' [g++ -pedantic]
