--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
+2014-03-09  Kevin Ushey <kevinushey@gmail.com>
+
+    * inst/include/Rcpp/vector/const_string_proxy.h: Workaround for issue
+    with constructing proxies from CHARSXPs
+
 2014-03-08  Kevin Ushey <kevinushey@gmail.com>
 
-    * inst/include/Rcpp/proxy/proxy.h: Make sure proxys know about the
+    * inst/include/Rcpp/proxy/proxy.h: Make sure proxies know about the
     const char* wrap shortcut
 
 2014-03-08  Dirk Eddelbuettel  <edd@debian.org>
