--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2014-03-13  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION: Release 0.11.0
+        * inst/NEWS.Rd: Release 0.11.0
+        * inst/include/Rcpp/config.h: Release 0.11.0
+        * debian/*: Similarly updated for new release to Debian
+
 2014-03-09  Kevin Ushey  <kevinushey@gmail.com>
 
 	* inst/include/Rcpp/vector/const_string_proxy.h: Workaround for issue
