--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+rcpp (0.11.1-1) unstable; urgency=low
+
+  * New release
+
+  * debian/control: Set Build-Depends: to current R version 
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Thu, 13 Mar 2014 20:20:11 -0500
+
 rcpp (0.11.0-1) unstable; urgency=low
 
   * New release
