--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-10  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/Attributes.R (compileAttributes): Read Imports: as well
+
 2014-05-07  Kevin Ushey  <kevinushey@gmail.com>
 
 	* R/Attributes.R (.plugins[["cpp11"]]): Set USE_CXX1X to more
