--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-18  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp/vector/Vector.h: Safer casting to fix #146
+
 2014-05-10  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/Attributes.R (compileAttributes): Read Imports: as well
