--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2014-05-18  Kevin Ushey  <kevinushey@gmail.com>
 
 	* inst/include/Rcpp/vector/Vector.h: Safer casting to fix #146
+	* inst/include/Rcpp/Environment.h: Idem
+	* inst/include/Rcpp/api/meat/Environment.h: Idem
+	* inst/include/Rcpp/vector/Vector.h: Idem
 
 2014-05-10  Dirk Eddelbuettel  <edd@debian.org>
 
