--- a/ChangeLog
+++ b/ChangeLog
@@ -1,27 +1,31 @@
+2014-05-23  Dirk Eddelbuettel  <edd@debian.org>
+
+        * R/Module.R (new_dummyObject): Remove erraneous quotes
+
 2014-05-18  Kevin Ushey  <kevinushey@gmail.com>
 
-	* inst/include/Rcpp/vector/Vector.h: Safer casting to fix #146
-	* inst/include/Rcpp/Environment.h: Idem
-	* inst/include/Rcpp/api/meat/Environment.h: Idem
-	* inst/include/Rcpp/vector/Vector.h: Idem
+	    * inst/include/Rcpp/vector/Vector.h: Safer casting to fix #146
+	    * inst/include/Rcpp/Environment.h: Idem
+	    * inst/include/Rcpp/api/meat/Environment.h: Idem
+	    * inst/include/Rcpp/vector/Vector.h: Idem
 
 2014-05-10  Dirk Eddelbuettel  <edd@debian.org>
 
-	* R/Attributes.R (compileAttributes): Read Imports: as well
+	    * R/Attributes.R (compileAttributes): Read Imports: as well
 
 2014-05-07  Kevin Ushey  <kevinushey@gmail.com>
 
-	* R/Attributes.R (.plugins[["cpp11"]]): Set USE_CXX1X to more
-	reasonable non-empty value
+	    * R/Attributes.R (.plugins[["cpp11"]]): Set USE_CXX1X to more
+	    reasonable non-empty value
 
 2014-05-06  Kevin Ushey  <kevinushey@gmail.com>
 
-	* R/Attributes.R (.plugins[["cpp11"]]): Set USE_CXX1X to non-empty
-	value
+	    * R/Attributes.R (.plugins[["cpp11"]]): Set USE_CXX1X to non-empty
+	    value
 
 2014-04-30  Dirk Eddelbuettel  <edd@debian.org>
 
-	* R/Attributes.R: Add plugins for C++0x and C++1y
+	    * R/Attributes.R: Add plugins for C++0x and C++1y
 
 2014-04-30  JJ Allaire <jj@rstudio.org>
 
@@ -29,7 +33,7 @@
 
 2014-04-02  Dirk Eddelbuettel  <edd@debian.org>
 
-	* tests/doRUnit.R: Better RUnit error report with thanks to Murray
+	    * tests/doRUnit.R: Better RUnit error report with thanks to Murray
 
 2014-03-18  JJ Allaire <jj@rstudio.org>
 
