--- a/ChangeLog
+++ b/ChangeLog
@@ -2,30 +2,34 @@
 
         * R/Module.R (new_dummyObject): Remove erraneous quotes
 
+        * .dir-locals.el: Setting tab-width to 8
+        
 2014-05-18  Kevin Ushey  <kevinushey@gmail.com>
 
-	    * inst/include/Rcpp/vector/Vector.h: Safer casting to fix #146
-	    * inst/include/Rcpp/Environment.h: Idem
-	    * inst/include/Rcpp/api/meat/Environment.h: Idem
-	    * inst/include/Rcpp/vector/Vector.h: Idem
+        * inst/include/Rcpp/vector/Vector.h: Safer casting to fix #146
+        * inst/include/Rcpp/Environment.h: Idem
+        * inst/include/Rcpp/api/meat/Environment.h: Idem
+        * inst/include/Rcpp/vector/Vector.h: Idem
+
+        * .dir-locals.el: Added for project-local Emacs settings
 
 2014-05-10  Dirk Eddelbuettel  <edd@debian.org>
 
-	    * R/Attributes.R (compileAttributes): Read Imports: as well
+        * R/Attributes.R (compileAttributes): Read Imports: as well
 
 2014-05-07  Kevin Ushey  <kevinushey@gmail.com>
 
-	    * R/Attributes.R (.plugins[["cpp11"]]): Set USE_CXX1X to more
-	    reasonable non-empty value
+        * R/Attributes.R (.plugins[["cpp11"]]): Set USE_CXX1X to more
+          reasonable non-empty value
 
 2014-05-06  Kevin Ushey  <kevinushey@gmail.com>
 
-	    * R/Attributes.R (.plugins[["cpp11"]]): Set USE_CXX1X to non-empty
-	    value
+        * R/Attributes.R (.plugins[["cpp11"]]): Set USE_CXX1X to non-empty
+          value
 
 2014-04-30  Dirk Eddelbuettel  <edd@debian.org>
 
-	    * R/Attributes.R: Add plugins for C++0x and C++1y
+        * R/Attributes.R: Add plugins for C++0x and C++1y
 
 2014-04-30  JJ Allaire <jj@rstudio.org>
 
@@ -33,7 +37,7 @@
 
 2014-04-02  Dirk Eddelbuettel  <edd@debian.org>
 
-	    * tests/doRUnit.R: Better RUnit error report with thanks to Murray
+        * tests/doRUnit.R: Better RUnit error report with thanks to Murray
 
 2014-03-18  JJ Allaire <jj@rstudio.org>
 
@@ -41,7 +45,7 @@
 
 2014-03-14  Dirk Eddelbuettel  <edd@debian.org>
 
-	* inst/include/Rcpp/DataFrame.h: Add missing return in Impl method
+        * inst/include/Rcpp/DataFrame.h: Add missing return in Impl method
 
 2014-03-13  Dirk Eddelbuettel  <edd@debian.org>
 
@@ -52,20 +56,20 @@
 
 2014-03-09  Kevin Ushey  <kevinushey@gmail.com>
 
-	* inst/include/Rcpp/vector/const_string_proxy.h: Workaround for issue
-	with constructing proxies from CHARSXPs
+        * inst/include/Rcpp/vector/const_string_proxy.h: Workaround for issue
+        with constructing proxies from CHARSXPs
 
 2014-03-08  Kevin Ushey  <kevinushey@gmail.com>
 
-	* inst/include/Rcpp/proxy/proxy.h: Make sure proxies know about the
-	const char* wrap shortcut
+        * inst/include/Rcpp/proxy/proxy.h: Make sure proxies know about the
+        const char* wrap shortcut
 
 2014-03-08  Dirk Eddelbuettel  <edd@debian.org>
 
-	* inst/include/Rcpp/proxy/Binding.h: Remove spurious ';' [g++ -pedantic]
-	* inst/include/Rcpp/proxy/ProtectedProxy.h: Idem
-	* inst/include/Rcpp/proxy/TagProxy.h: Idem
-	* inst/include/Rcpp/proxy/AttributeProxy.h: Idem
+        * inst/include/Rcpp/proxy/Binding.h: Remove spurious ';' [g++ -pedantic]
+        * inst/include/Rcpp/proxy/ProtectedProxy.h: Idem
+        * inst/include/Rcpp/proxy/TagProxy.h: Idem
+        * inst/include/Rcpp/proxy/AttributeProxy.h: Idem
 
 2014-03-05  Kevin Ushey <kevinushey@gmail.com>
 
@@ -107,12 +111,12 @@
 
 2014-02-07  Kevin Ushey  <kevinushey@gmail.com>
 
-	* inst/include/Rcpp/Reference.h: Add default ctor
+        * inst/include/Rcpp/Reference.h: Add default ctor
 
 2014-02-03  Kevin Ushey  <kevinushey@gmail.com>
 
-	* inst/include/Rcpp/vector/Vector.h: Enable conversion from
-	Rcpp vectors to RObject
+        * inst/include/Rcpp/vector/Vector.h: Enable conversion from
+        Rcpp vectors to RObject
 
 2014-02-02  Dirk Eddelbuettel  <edd@debian.org>
 
@@ -127,11 +131,11 @@
 
 2014-02-01  Dirk Eddelbuettel  <edd@debian.org>
 
-	* tests/doRUnit.R: Simplified following pattern in RProtoBuf
+        * tests/doRUnit.R: Simplified following pattern in RProtoBuf
 
-	* vignettes/Rcpp-unitTests.Rnw: Remove a now superfluous global var
+        * vignettes/Rcpp-unitTests.Rnw: Remove a now superfluous global var
 
-	* vignettes/Rcpp.bib: Updated references to current packages
+        * vignettes/Rcpp.bib: Updated references to current packages
 
 2014-02-01  JJ Allaire  <jj@rstudio.org>
 
@@ -140,40 +144,40 @@
 
 2014-01-31  Dirk Eddelbuettel  <edd@debian.org>
 
-	* vignettes/Rcpp-FAQ.Rnw: Render code with background boxen
-	* vignettes/Rcpp-package.Rnw: Idem
-	* vignettes/Rcpp-modules.Rnw: Idem
-	* vignettes/Rcpp-extending.Rnw: Idem
-	* vignettes/Rcpp-sugar.Rnw: Idem
+        * vignettes/Rcpp-FAQ.Rnw: Render code with background boxen
+        * vignettes/Rcpp-package.Rnw: Idem
+        * vignettes/Rcpp-modules.Rnw: Idem
+        * vignettes/Rcpp-extending.Rnw: Idem
+        * vignettes/Rcpp-sugar.Rnw: Idem
 
-	* vignettes/Rcpp-attributes.Rnw: Switched to highlight driver
+        * vignettes/Rcpp-attributes.Rnw: Switched to highlight driver
 
-	* inst/include/Rcpp/Benchmark/Timer.h: Reverted back to using
-	iterators via use of anonymous namespace for accessors
+        * inst/include/Rcpp/Benchmark/Timer.h: Reverted back to using
+        iterators via use of anonymous namespace for accessors
 
-	* inst/announce/ANNOUNCE-0.11.0.txt: Updated
+        * inst/announce/ANNOUNCE-0.11.0.txt: Updated
 
 2014-01-31  Dirk Eddelbuettel  <edd@debian.org>
 
-	* man/Rcpp.package.skeleton.Rd: Also updated
+        * man/Rcpp.package.skeleton.Rd: Also updated
 
 2014-01-31  JJ Allaire  <jj@rstudio.org>
 
         * R/Attributes.R: Embedded R code chunks in sourceCpp are now
-	executed within the working directory of the C++ source file.
+        executed within the working directory of the C++ source file.
 
 2014-01-30  Dirk Eddelbuettel  <edd@debian.org>
 
-	* vignettes/Rcpp-package.Rnw: Updates for upcoming release
+        * vignettes/Rcpp-package.Rnw: Updates for upcoming release
 
 2014-01-28  Dirk Eddelbuettel  <edd@debian.org>
 
-	* vignettes/Rcpp-FAQ.Rnw: Some updates for upcoming release
+        * vignettes/Rcpp-FAQ.Rnw: Some updates for upcoming release
 
 2014-01-25  Dirk Eddelbuettel  <edd@debian.org>
 
-	* inst/include/Rcpp/Benchmark/Timer.h: Simplified -- Rcpp Gallery
-	example using it was not building any longer under g++
+        * inst/include/Rcpp/Benchmark/Timer.h: Simplified -- Rcpp Gallery
+        example using it was not building any longer under g++
 
 2014-01-23  Dirk Eddelbuettel  <edd@debian.org>
 
