--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,13 @@
+2014-05-24  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .Rbuildignore: Add .dir-locals.el
+
 2014-05-23  Dirk Eddelbuettel  <edd@debian.org>
 
         * R/Module.R (new_dummyObject): Remove erraneous quotes
 
         * .dir-locals.el: Setting tab-width to 8
-        
+
 2014-05-18  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/vector/Vector.h: Safer casting to fix #146
@@ -49,9 +53,9 @@
 
 2014-03-13  Dirk Eddelbuettel  <edd@debian.org>
 
-        * DESCRIPTION: Release 0.11.0
-        * inst/NEWS.Rd: Release 0.11.0
-        * inst/include/Rcpp/config.h: Release 0.11.0
+        * DESCRIPTION: Release 0.11.1
+        * inst/NEWS.Rd: Release 0.11.1
+        * inst/include/Rcpp/config.h: Release 0.11.1
         * debian/*: Similarly updated for new release to Debian
 
 2014-03-09  Kevin Ushey  <kevinushey@gmail.com>
