--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-05-28  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/vector/vector_from_string.h: Protect result of
+        Rf_mkString
+
 2014-05-23  Dirk Eddelbuettel  <edd@debian.org>
 
         * R/Module.R (new_dummyObject): Remove erraneous quotes
