--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-05  JJ Allaire <jj@rstudio.org>
+
+        * R/Attributes.R: Use -std=c++0x for cpp11 plugin on Windows when R <= 3.0
+
 2014-05-28  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/vector/vector_from_string.h: Protect result of
