--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-08  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .Rbuildignore: Added 'Rcpp/build/Rcpp.pdf' per request of Uwe / CRAN
+
 2014-06-06  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.11.2
