correct previous commit and remove the actual removal from cleanup

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2014-06-08  Dirk Eddelbuettel  <edd@debian.org>
 
-        * .Rbuildignore: Added 'Rcpp/build/Rcpp.pdf' per request of Uwe / CRAN
+        * cleanup: Do not remove 'build/Rcpp.pdf', thanks to hint by Kurt / CRAN
 
 2014-06-06  Dirk Eddelbuettel  <edd@debian.org>
 
