--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-07-04  Dirk Eddelbuettel  <edd@debian.org>
+
+        * vignettes/Rcpp-unitTests.Rnw: Commented-out copy of results to /tmp
+
 2014-06-29  JJ Allaire <jj@rstudio.org>
 
         * R/Attributes.R: fix setwd problem when sourceCpp used a
