--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2014-07-09  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/Language.h: OUT -> RESULT_TYPE
+        * inst/include/Rcpp/generated/InternalFunction__ctors.h: Idem
+        * inst/include/Rcpp/module/Module_generated_CppFunction.h: Idem
+        * inst/include/Rcpp/module/Module_generated_CppMethod.h: Idem
+        * inst/include/Rcpp/module/Module_generated_Pointer_CppMethod.h: Idem
+        * inst/include/Rcpp/module/Module_generated_Pointer_method.h: Idem
+        * inst/include/Rcpp/module/Module_generated_function.h: Idem
+        * inst/include/Rcpp/module/Module_generated_get_signature.h: Idem
+        * inst/include/Rcpp/module/Module_generated_method.h: Idem
+        * inst/include/Rcpp/module/get_return_type.h: Idem
+        * inst/include/Rcpp/sugar/block/SugarBlock_1.h: Idem
+        * inst/include/Rcpp/sugar/block/SugarBlock_2.h: Idem
+        * inst/include/Rcpp/sugar/block/SugarBlock_3.h: Idem
+        * inst/include/Rcpp/sugar/block/SugarMath.h: Idem
+        * inst/include/Rcpp/sugar/functions/complex.h: Idem
+
 2014-07-08  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/InternalFunction.h: Add missing update(SEXP) method
