--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-07-12  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/generated/InternalFunction__ctors.h: Regenerated
+        with tighter whitespace and updated header information from updated
+        generator script in corresponding rcpp-scripts repoIdem
+
 2014-07-09  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/Language.h: OUT -> RESULT_TYPE
