--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
         with tighter whitespace and updated header information from updated
         generator script in corresponding rcpp-scripts repo
         * inst/include/Rcpp/module/Module_generated_CppFunction.h: Idem
+        * inst/include/Rcpp/module/Module_generated_CppMethod.h: Idem
 
 2014-07-09  Kevin Ushey  <kevinushey@gmail.com>
 
