--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
         generator script in corresponding rcpp-scripts repo
         * inst/include/Rcpp/module/Module_generated_CppFunction.h: Idem
         * inst/include/Rcpp/module/Module_generated_CppMethod.h: Idem
+        * inst/include/Rcpp/module/Module_generated_Pointer_CppMethod.h: Idem
 
 2014-07-09  Kevin Ushey  <kevinushey@gmail.com>
 
