--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
         * inst/include/Rcpp/vector/Matrix.h: Idem
         * inst/include/Rcpp/vector/DimNameProxy.h: Idem
 
+2014-07-09  Kevin Ushey  <kevinushey@gmail.com>
+
+        * R/Attributes.R: Strip version in .parseLinkingTo
+
 2014-07-12  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/generated/InternalFunction__ctors.h: Regenerated
