--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-09  Kevin Ushey  <kevinushey@gmail.com>
+
+        * R/Attributes.R: Strip version in .parseLinkingTo
 2014-07-12  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/generated/InternalFunction__ctors.h: Regenerated
