--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-07-28  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/generated/InternalFunction__ctors.h: Updated from
+        corrected creator script
+
 2014-07-25  Romain Francois  <romain@r-enthusiasts.com>
 
         * inst/include/Rcpp/Benchmark/Timer.h: Added new static method
