--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,15 @@
+2014-07-29  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/vector/no_init.h: Add no_init for matrices
+        * inst/include/Rcpp/vector/Matrix.h: Idem
+        * inst/include/Rcpp/vector/Vector.h: Idem
+        * inst/unitTests/runit.Matrix.R: Idem
+        * inst/unitTests/cpp/Matrix.cpp: Idem
+
 2014-07-29  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/vector/proxy.h: Removed operator bool() cast as
-        discusses by Christian Authmann on rcpp-devel 
+        discusses by Christian Authmann on rcpp-devel
 
 2014-07-28  Dirk Eddelbuettel  <edd@debian.org>
 
