--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2014-08-13  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/api/meat/meat.h: Reintroduce meat
+        * inst/include/Rcpp/api/meat/proxy.h: Idem
+        * inst/include/Rcpp/proxy/AttributeProxy.h: Idem
+        * inst/include/Rcpp/proxy/Binding.h: Idem
+        * inst/include/Rcpp/proxy/NamesProxy.h: Idem
+        * inst/include/Rcpp/proxy/SlotProxy.h: Idem
+        * inst/include/Rcpp/proxy/TagProxy.h: Idem
+        * inst/include/Rcpp/proxy/proxy.h: Idem
+
 2014-08-03  Dirk Eddelbuettel  <edd@debian.org>
 
         * vignettes/Rcpp-FAQ.Rnw: Updated with respect to OS X installations
