--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-09-01  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/vector/ListOf.h: `size()` member function should
+        return `R_len_t` rather than `int`
+
 2014-08-30  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/vector/Vector.h: Mark two 'from string' ctors as
