--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-09-02  JJ Allaire <jj@rstudio.org>
+
+        * R/Attributes.R: Include LinkingTo in DESCRIPTION fields scanned
+        to confirm that C++ dependencies are referenced by package.
+
 2014-09-01  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/vector/ListOf.h: `size()` member function should
