--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2014-09-02  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/api/meat/proxy.h: Finish meat reintroduction + tests
+        * inst/unitTests/runit.wrap.R: Idem
+        * inst/unitTests/cpp/wrap.cpp: Idem
+        * inst/include/Rcpp/proxy/FieldProxy.h: Idem
+
 2014-08-13  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/api/meat/meat.h: Reintroduce meat
