--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-09-09  Dirk Eddelbuettel  <edd@debian.org>
+
+        * R/unit.tests.R: Fully qualify three functions from RUnit via ::
+
 2014-09-03  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/Environment.h: make new_env a free function
