--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2014-09-13  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/vector/Vector.h: Allow logical vectors to be created
+        from bools
+        * inst/unitTests/runit.Vector.R: Idem
+        * inst/unitTests/cpp/Vector.cpp: Idem
+
 2014-09-13  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/skeleton/Rcpp_modules_examples.Rd: Added to document modules examples
