--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-09-23  JJ Allaire <jj@rstudio.org>
+
+        * R/Attributes.R: Add dryRun parameter to sourceCpp.
+
 2014-09-21  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/unitTests/runit.environments.R: Use 'checkIdentical' as it's a
