--- a/ChangeLog
+++ b/ChangeLog
@@ -78,7 +78,7 @@
 2014-08-30  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/vector/Vector.h: Mark two 'from string' ctors as
-        deprecated following a suggestion by Yixuan Qiu
+        deprecated following a suggestion by Yixuan Qiu [reversed on 2014-09-02]
 
 2014-08-18  Dirk Eddelbuettel  <edd@debian.org>
 
