--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-09-29  Dirk Eddelbuettel  <edd@debian.org>
+
+        * debian/*: Changes for Debian release of 0.11.3 
+
 2014-09-27  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.11.3
